tests/baselines/reference/parserES5ComputedPropertyName4.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts(1,15): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts (1 errors) ====
    var v = { get [e]() { } };
                  ~~~
!!! error TS9002: Computed property names are not currently supported.